discussion/kv_engine/160233/160233_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Make rollback test param consistent with other tests

Make the rollback backend test parameter consistent with other tests
so that we can re-use a function in test_helpers to parse the config
(for when we add nexus variants).

Change-Id: I03d14c47cc752a27d942c0dde304996b9fce8dca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-08 15:24:59.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-08 15:50:31.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39550/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.h(549): error C2027: use of undefined type "SynchronousEPEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39550/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12105/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22: error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
        return engine->getConfiguration().getBackend() == "nexus" &&
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_synchronous_ep_engine_fwd.h:16:7: note: forward declaration of "SynchronousEPEngine"
class SynchronousEPEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12105/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21925/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1767/ : FAILURE

Compile error at [2021-09-08T15:38:00.894Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1748/ : FAILURE

Compile error at [2021-09-08T15:45:30.110Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12864/ : FAILURE

Compile error at [2021-09-08T15:32:36.349Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12864/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13717/ : FAILURE

Compile error at [2021-09-08T15:43:49.079Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13717/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14426/ : FAILURE

Compile error at [2021-09-08T15:48:20.159Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13957/ : FAILURE

Compile error at [2021-09-08T15:47:24.623Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13957/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33688/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10896/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
